-- 05/04/2022
- Moved includes to the source files.
- Fixed memory leak with SSL_CTX.

-- 30/01/2022
- Removed the temporary workaround with CAP_DAC_OVERRIDE.

-- 25/01/2022
- Moved shared code files into a directory named 'common'.
- Added a temporary capability to the CapabilitySetter (CAP_DAC_OVERRIDE).
- The communicator class is now used as a non-static object.