@@ -2,7 +2,15 @@
 
 class SignalHandler
 {
+private:
+    int _signal;
+    bool _signal_set;
+
 public:
+    SignalHandler(int signal);
+    SignalHandler(int signal, void(*handler_func)(int), int flags);
+    ~SignalHandler();
+
     // Sets a new signal handler using sigaction()
-    static void set_signal_handler(int sig, void(*handler_func)(int), int flags);
+    void set_signal_handler(void(*handler_func)(int), int flags);
 };
